# stage

./: .gitignore  Cargo.toml  README.md  bump.sh  clippy.sh  com.github.aganzha.stage.desktop  com.github.aganzha.stage.json  com.github.aganzha.stage.metainfo.xml  compile_resources.sh  compile_schema.sh  debbuild.sh  debug.py  flamegraph.sh  flatpak-cargo-generator.py  flatpak_build.sh  flatpak_env.sh  flatpak_install.sh  flatpak_run.sh  flatpak_test.sh  gdb.commands  gdb.commands.run  gdb.sh  index.html  install.sh  io.github.aganzha.Stage-local.json  io.github.aganzha.Stage-tests.json  io.github.aganzha.Stage.desktop  io.github.aganzha.Stage.gresource.xml  io.github.aganzha.Stage.gschema.xml  io.github.aganzha.Stage.json  io.github.aganzha.Stage.metainfo.xml  meson.build  rpmbuild.sh  run.sh  rustfmt.toml  sign.sh  stage.flatpakref  stage.flatpakrepo  test.sh  uplodad.sh
.github/workflows/: rust.yml  tests.yml
debian/: changelog  control  postinst  rules
debian/source/: options
flatpak/: com.github.aganzha.stage.json
src/: TODO.txt  architecture.txt  branches.rs  branches_view.rs  commit_view.rs  common.rs  common_tests.rs  context.rs  debug.rs  dialogs.rs  external.rs  git.rs  io.github.aganzha.Stage.gschema.xml  log_view.rs  main.rs  oid_view.rs  props_agent.rs  refs_view.rs  settings.gschema.xml  stashes_view.rs  status_view.rs  style.css  syntax.rs  tags_view.rs  tests.rs  text_view.rs  utils.rs  widgets.rs
src/git/: branch.rs  commit.rs  conflict.rs  git_log.rs  merge.rs  remote.rs  stash.rs  tag.rs  test_conflict.rs  test_merge.rs  tests.rs
src/status_view/: commit.rs  container.rs  context.rs  factory.rs  headerbar.rs  monitor.rs  op.rs  reconciliation.rs  remotes.rs  render.rs  stage.rs  stage_op.rs  stage_view.rs  tags.rs  tests.rs  textview.rs  view.rs  view_state.rs
